--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   sentry: ^9.7.0
   dartz: ^0.10.1
   connectivity_plus: ^7.0.0
+  sqflite: ^2.4.2
+  path: ^1.9.1
+
   flutter:
     sdk: flutter
 
